# webhook_sender

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yaml  rust-core.yaml
src/: app.rs  main.rs  tests.rs
src/app/: api_handler.rs
