[package]
name = "webhook_sender"
version = "1.2.0"
edition = "2021"
authors = ["Xanthus58 <xanthus58@protonmail.com>"]
license = "MIT"
repository = "https://github.com/Xanthus58/webhook_sender"
readme = "README.md"
description = "An application that sends a message via a discord webhook to a user defined channel."
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
egui-notify = "0.3.0"
self_update = "0.31.0"
webhook = "2.1.0"