[package]
name = "webhook_sender"
version = "1.2.4"
edition = "2021"
authors = ["Xanthus58 <xanthus58@protonmail.com>"]
license = "MIT"
repository = "https://github.com/Xanthus58/webhook_sender"
readme = "README.md"
description = "An application that sends a message via a discord webhook to a user defined channel."
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.22.0", features = ["full"] }
egui-notify = "0.4.4"
self_update = "0.32.0"
webhook = "2.1.0"

[profile.release]
# See info here https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip = true
opt-level = "s"
lto = true
codegen-units = 1